--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 django==2.2.13
 eventlet==0.30.0
-python-engineio
-python-socketio
+python-engineio==3.13.0
+python-socketio==4.6.1
 pytz==2018.7
 six==1.10.0
